[package]
name = "rsc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"


[profile.release]
opt-level = "z"     # or "z" for small binary also  (try both "z" or "s" to inspect)
lto = true
debug = false
codegen-units = 1
strip = true        # more specifically "symbols"
panic = "abort"
incremental = false

[profile.dev]
incremental = true

[dev-dependencies]
